Adicionado a pasta de assets, criando o item de paradas para a recycle view, estilizando a navBar com FAB - Floating action button e arrumando o menu para as páginas igual no figma

--- a/mobile_hivemind/app/src/main/res/navigation/mobile_navigation.xml
+++ b/mobile_hivemind/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,14 +12,19 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_calendar"
         android:name="com.aula.mobile_hivemind.ui.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_calendar" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_dashboard"
         android:name="com.aula.mobile_hivemind.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_dashboard" />
+    <fragment
+        android:id="@+id/navigation_perfil"
+        android:name="com.aula.mobile_hivemind.ui.perfil.PerfilFragment"
+        android:label="fragment_perfil"
+        tools:layout="@layout/fragment_perfil" />
 </navigation>
