--- a/mobile_hivemind/app/src/main/res/layout/fragment_cadastro_basico.xml
+++ b/mobile_hivemind/app/src/main/res/layout/fragment_cadastro_basico.xml
@@ -1,14 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".ui.auth.cadastro.CadastroBasicoFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <!-- Título -->
 
-</FrameLayout>
+    <!-- Telefone -->
+    <TextView
+        android:id="@+id/txtTitulo"
+        android:layout_width="379dp"
+        android:layout_height="83dp"
+        android:layout_marginTop="72dp"
+        android:layout_marginBottom="39dp"
+        android:fontFamily="@font/lexend_deca_semibold"
+        android:text="Informação do responsável"
+        android:textColor="#000000"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutNOMEEMP"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.312"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayoutNOMEEMP"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="390dp"
+        android:layout_height="60dp"
+        android:hint="Telefone"
+        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutSENHA"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtTitulo">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextNOMEEMP"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:text="Initial text" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!-- Nome -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayoutSENHA"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="390dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="30dp"
+        android:hint="Nome"
+        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutCONFSENHA"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNOMEEMP">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextSENHA"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:maxLines="1"
+            android:text="41.586.734/0001-81" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!-- CPF -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayoutCONFSENHA"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="390dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="30dp"
+        android:hint="CPF"
+        app:layout_constraintBottom_toTopOf="@+id/layoutRGUpload"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSENHA">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextCONFSENHA"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:maxLines="1"
+            android:text="2222-6/00" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!-- Upload RG -->
+    <LinearLayout
+        android:id="@+id/layoutRGUpload"
+        android:layout_width="390dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:orientation="vertical"
+        android:background="@drawable/borda_anexo"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCONFSENHA"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:id="@+id/btnAnexarRG"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:drawableStart="@drawable/ic_clipn"
+            android:drawablePadding="8dp"
+            android:fontFamily="@font/lexend_deca"
+            android:gravity="center_vertical"
+            android:paddingStart="12dp"
+            android:text="Adicionar anexo"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/txtContinuar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Próximo"
+        android:textColor="#5F33E1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.968"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.935" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
