--- a/mobile_hivemind/app/src/main/res/layout/fragment_criacao_conta.xml
+++ b/mobile_hivemind/app/src/main/res/layout/fragment_criacao_conta.xml
@@ -1,14 +1,152 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".ui.auth.cadastro.CriacaoContaFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <!-- Título -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/txtTitulo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="72dp"
+        android:fontFamily="@font/lexend_deca_semibold"
+        android:text="Informação do responsável"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-</FrameLayout>
+    <!-- Nome da empresa -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayoutNOMEEMP"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="390dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:hint="Nome da empresa"
+        app:layout_constraintTop_toBottomOf="@id/txtTitulo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextNOMEEMP"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxLines="1" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!-- Senha -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayoutSENHA"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="390dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:hint="Senha"
+        app:layout_constraintTop_toBottomOf="@id/textInputLayoutNOMEEMP"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextSENHA"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:maxLines="1" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!-- Requisitos da senha -->
+    <TextView
+        android:id="@+id/txtRequisitosSenha"
+        android:layout_width="390dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:text="Sua senha precisa ter\n1. Comprimento da senha: mínimo de oito caracteres.\n2. Caracteres numéricos: mínimo de dois números.\n3. Caracteres especiais: mínimo de um caractere especial.\n4. Letras maiúsculas: mínimo de uma letra maiúscula.\n5. Letras minúsculas: mínimo de uma letra minúscula."
+        android:textSize="12sp"
+        android:fontFamily="@font/lexend_deca"
+        android:textColor="@android:color/darker_gray"
+        app:layout_constraintTop_toBottomOf="@id/textInputLayoutSENHA"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Confirmação de senha -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayoutCONFSENHA"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="390dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:hint="Confirmação de senha"
+        app:layout_constraintTop_toBottomOf="@id/txtRequisitosSenha"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextCONFSENHA"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:maxLines="1" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!-- Anexo -->
+    <LinearLayout
+        android:id="@+id/layoutImagemUpload"
+        android:layout_width="390dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:orientation="vertical"
+        android:background="@drawable/borda_anexo"
+        app:layout_constraintTop_toBottomOf="@id/textInputLayoutCONFSENHA"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:id="@+id/btnAnexarImagem"
+            android:layout_width="match_parent"
+            android:layout_height="63dp"
+            android:drawableStart="@drawable/icon"
+            android:drawablePadding="8dp"
+            android:fontFamily="@font/lexend_deca"
+            android:gravity="center_vertical"
+            android:paddingStart="12dp"
+            android:text="Adicionar anexo"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+    <!-- Botão Voltar -->
+    <TextView
+        android:id="@+id/btnVoltar"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="24dp"
+        android:background="@drawable/botao_voltar"
+        android:fontFamily="@font/lexend_deca_semibold"
+        android:gravity="center"
+        android:text="Voltar"
+        android:textColor="@android:color/white"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <!-- Botão Próximo -->
+    <TextView
+        android:id="@+id/txtContinuar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:text="Próximo"
+        android:textColor="#5F33E1"
+        android:fontFamily="@font/lexend_deca_semibold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
