--- a/mobile_hivemind/app/src/main/res/values/colors.xml
+++ b/mobile_hivemind/app/src/main/res/values/colors.xml
@@ -6,5 +6,10 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#CA8E8E</color>
+    <color name="vermelho">#F28F8F</color>
+    <color name="roxo">#5F33E1</color>
+    <color name="cinza">#9E9E9E</color>
+    <color name="verde">#46F080</color>
+    <color name="amarelo">#EDF046</color>"
 </resources>
