--- a/mobile_hivemind/app/src/main/res/layout/fragment_login.xml
+++ b/mobile_hivemind/app/src/main/res/layout/fragment_login.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="150dp"
         android:fontFamily="@font/lexend_deca_medium"
         android:text="Entrar na conta"
+        android:textColor="#000000"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
