--- a/mobile_hivemind/app/src/main/res/values/colors.xml
+++ b/mobile_hivemind/app/src/main/res/values/colors.xml
@@ -6,10 +6,16 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#CA8E8E</color>
+    <color name="white">#FFFFFF</color>
     <color name="vermelho">#F28F8F</color>
     <color name="roxo">#5F33E1</color>
     <color name="cinza">#9E9E9E</color>
     <color name="verde">#46F080</color>
     <color name="amarelo">#EDF046</color>"
+
+        <color name="purple_button_bg">#6A1B9A</color> <color name="purple_accent_light">#A378FF</color> <color name="text_dark">#212121</color>
+        <color name="text_medium">#616161</color>
+        <color name="text_light_hint">#9E9E9E</color>
+
+        <color name="light_card_background">#F8F8FF</color> <color name="background_light">#FDFDFD</color> <color name="hint_text_color">#A378FF</color>
 </resources>
