--- a/mobile_hivemind/app/src/main/res/values/preloaded_fonts.xml
+++ b/mobile_hivemind/app/src/main/res/values/preloaded_fonts.xml
@@ -4,5 +4,11 @@
         <item>@font/lexend_deca_medium</item>
         <item>@font/lexend_deca_semibold</item>
         <item>@font/lexend_deca_thin</item>
+        <item>@font/poppins</item>
+        <item>@font/poppins_bold</item>
+        <item>@font/poppins_light</item>
+        <item>@font/poppins_semibold</item>
+        <item>@font/roboto</item>
+        <item>@font/roboto_light</item>
     </array>
 </resources>
